Readequacao HAL; parametros de sorting; correcao de bug valor_total doacoes de incentivador
